fixing wrap

--- a/less/style.less
+++ b/less/style.less
@@ -57,10 +57,10 @@
 /* Wrapper for page content to push down footer */
 #wrap {
   min-height: 100%;
-  height: auto !important;
+  // height: auto !important;
   height: 100%;
   /* Negative indent footer by it's height */
-  margin: 0 auto -70px;
+  margin: 41px auto -55px;
 }
 
 /* Set the fixed height of the footer here */
